just getting a home and about page working

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,7 @@
-hi
+<div class="row-fluid">
+  <div class="span3">
+    <h3>What Is This?</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas lacinia ipsum mollis semper tincidunt. In faucibus velit sagittis enim dignissim, ut elementum dui ornare. Duis sit amet blandit justo. Nam vehicula enim viverra, ultricies erat eget, commodo lorem. In mattis, libero vel pretium dictum, eros mi rhoncus tellus </p>
+    <%= link_to "more...", about_path %>
+  </div>
+</div>
