--- a/app/views/layouts/home_index.html.erb
+++ b/app/views/layouts/home_index.html.erb
@@ -52,12 +52,19 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="/">The Betterizer</a>
+          <a class="brand" href="#">The Betterizer</a>
           <div class="container nav-collapse">
             <ul class="nav">
             </ul>
           </div><!--/.nav-collapse -->
         </div>
+      </div>
+    </div>
+
+    <div class="hero-unit">
+      <div class="container">
+        <h1 style="color:white">The Betterizer</h1>
+        <h3 style="color:white; padding-left: 10px;">be better at the things you do while you get things done</h3>
       </div>
     </div>
 
