--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,5 +1,5 @@
 @import "twitter/bootstrap/bootstrap";
-body { padding-top: 60px }
+body { padding-top: 40px }
 html,body{
     height: 100%
 }
@@ -22,6 +22,10 @@ footer{
     border-top: solid 1px black;
     background-color: gray;
     padding-top: 5px;
+}
+.hero-unit {
+  background-image: asset-url("home_index_hero.png");
+  height: 200px;
 }
 @import "twitter/bootstrap/responsive";
 
