--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,4 +4,7 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas lacinia ipsum mollis semper tincidunt. In faucibus velit sagittis enim dignissim, ut elementum dui ornare. Duis sit amet blandit justo. Nam vehicula enim viverra, ultricies erat eget, commodo lorem. In mattis, libero vel pretium dictum, eros mi rhoncus tellus </p>
     <%= link_to "more...", about_path %>
   </div>
+  <div class="span9">
+    <%= link_to "Let's Go", new_work_path, class: "btn btn-success" %>
+  </div>
 </div>
