--- a/app/views/works/new.html.erb
+++ b/app/views/works/new.html.erb
@@ -1,36 +1,41 @@
-<div class="title">Submit Your Work</div>
-<% if current_user %>
-  <%= form_for Work.new, multipart: true do |f| %>
-    <fieldset>
-      <legend>First a few questions</legend>
-          <label><%= f.label "Who are you writing this for?" %></label>
-          <%= f.text_field :student_audience %>
+<div class="row-fluid"><h2>Submit Your Work</h2></div>
+<div class="row-fluid">
+  <div class="span2">&nbsp;</div>
+  <div class="span8">
+  <% if current_user %>
+    <%= form_for Work.new, multipart: true do |f| %>
+      <fieldset>
+        <legend>First a few questions</legend>
+            <label><%= f.label "Who are you writing this for?" %></label>
+            <%= f.text_field :student_audience, class: "span12" %>
 
-          <label><%= f.label "What do you want them to think or do as a result?" %></label>
-          <%= f.text_area :student_desired_outcome, rows: 4, cols: 60 %>
+            <label><%= f.label "What do you want them to think or do as a result?" %></label>
+            <%= f.text_area :student_desired_outcome, rows: 4, cols: 60 , class: "span12" %>
 
-          <label><%= f.label "In the simplest words possible, what are you trying to say?" %></label>
-          <%= f.text_area :student_essence, rows: 4, cols: 60 %>
+            <label><%= f.label "In the simplest words possible, what are you trying to say?" %></label>
+            <%= f.text_area :student_essence, rows: 4, cols: 60, class: "span12"  %>
 
-          <label><%= f.label "Anything else?" %></label>
-          <%= f.text_area :student_comment, rows: 4, cols: 60 %>
-    </fieldset>
-    <fieldset>
-      <legend>What are we betterizing?</legend>
-      <label>A document you want to upload?</label>
-      <%= f.file_field :temp_document %>
+            <label><%= f.label "Anything else?" %></label>
+            <%= f.text_area :student_comment, rows: 4, cols: 60, class: "span12"  %>
+      </fieldset>
+      <fieldset>
+        <legend>What are we betterizing?</legend>
+        <label>A document you want to upload?</label>
+        <%= f.file_field :temp_document %>
 
-      <label>Or some straight-up text?</label>
-      <%= f.text_area :temp_text, rows: 4, columns: 60 %>
+        <label>Or some straight-up text?</label>
+        <%= f.text_area :temp_text, rows: 4, columns: 60, class: "span12"  %>
 
-      <div class="form-actions">
-        <button type="submit" class="btn btn-primary">Start Work</button>
-      </div>
-    </fieldset>
+        <div class="form-actions">
+          <button type="submit" class="btn btn-primary">Start Work</button>
+        </div>
+      </fieldset>
+    <% end %>
+  <% else %>
+    <div>
+      You are not currently signed in. In order to work with us, see Patrick.
+    </div>
   <% end %>
-<% else %>
-  <div>
-    You are not currently signed in. In order to work with us, see Patrick.
   </div>
-<% end %>
-
+  <div class="span2">&nbsp;</div>
+</div>
