adds the different views for roles - no content yet

--- a/app/views/works/coach_show.html.erb
+++ b/app/views/works/coach_show.html.erb
@@ -1,4 +1,4 @@
 <%= render "layouts/page_header", title: "Work" %>
 <div clas="row-fluid">
-  This is the user view
+  This is the coach view
 </div>
