--- a/app/views/works/new.html.erb
+++ b/app/views/works/new.html.erb
@@ -1,4 +1,4 @@
-<div class="row-fluid"><h2>Submit Your Work</h2></div>
+<%= render "layouts/page_header", title: "Submit Your Work" %>
 <div class="row-fluid">
   <div class="span2">&nbsp;</div>
   <div class="span8">
