--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,5 +1,1 @@
-<div class="row-fluid">
-  <div class="page-header">
-    <h1>What Is this?</h3>
-  </div>
-</div>
+<%= render "layouts/page_header", title: "What's all this, then?" %>
