--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,32 +1,4 @@
 @import "twitter/bootstrap/bootstrap";
-body { padding-top: 40px }
-html,body{
-    height: 100%
-}
-
-#holder{
-    min-height: 100%;
-    position:relative;
-}
-
-#body{
-    padding-bottom: 100px;    /* height of footer */
-}
-
-footer{
-    height: 100px; 
-    width:100%;
-    position: absolute;
-    left: 0;
-    bottom: 0; 
-    border-top: solid 1px black;
-    background-color: gray;
-    padding-top: 5px;
-}
-.hero-unit {
-  background-image: asset-url("home_index_hero.png");
-  height: 200px;
-}
 @import "twitter/bootstrap/responsive";
 
 // Set the correct sprite paths
@@ -56,3 +28,35 @@ footer{
 //
 // Example:
 // @linkColor: #ff0000;
+html, body {
+            height: 100%;
+        }
+        footer {
+            color: #666;
+            background: #222;
+            padding: 17px 0 18px 0;
+            border-top: 1px solid #000;
+        }
+        footer a {
+            color: #999;
+        }
+        footer a:hover {
+            color: #efefef;
+        }
+        .wrapper {
+            min-height: 100%;
+            height: auto !important;
+            height: 100%;
+            margin: 0 auto -63px;
+        }
+        .push {
+            height: 63px;
+        }
+        /* not required for sticky footer; just pushes hero down a bit */
+        .wrapper > .container {
+            padding-top: 40px;
+        }
+.hero-unit {
+  background-image: asset-url("home_index_hero.png");
+height: 200px;
+}
