--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,33 +9,14 @@
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
-      <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
     <![endif]-->
 
     <%= stylesheet_link_tag "application", :media => "all" %>
 
-    <%# <!-- For third-generation iPad with high-resolution Retina display: --> %>
-    <%# <!-- Size should be 144 x 144 pixels --> %>
-    <%# <%= favicon_link_tag 'apple-touch-icon-144x144-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '144x144' %1> %>
-
-    <%# <!-- For iPhone with high-resolution Retina display: --> %>
-    <%# <!-- Size should be 114 x 114 pixels --> %>
-    <%# <%= favicon_link_tag 'apple-touch-icon-114x114-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '114x114' %1> %>
-
-    <%# <!-- For first- and second-generation iPad: --> %>
-    <%# <!-- Size should be 72 x 72 pixels --> %>
-    <%# <%= favicon_link_tag 'apple-touch-icon-72x72-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '72x72' %1> %>
-
-    <%# <!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: --> %>
-    <%# <!-- Size should be 57 x 57 pixels --> %>
-    <%# <%= favicon_link_tag 'apple-touch-icon-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png' %1> %>
-
-    <%# <!-- For all other devices --> %>
-    <%# <!-- Size should be 32 x 32 pixels --> %>
-    <%# <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %1> %>
   </head>
   <body>
-
+    <div class="wrapper">
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
@@ -61,7 +42,7 @@
       </div>
     </div>
 
-    <div class="container clear-top">
+      <div class="container clear-top betterizer-content">
         <div class="row-fluid">
           <div class="span12">
             <%= bootstrap_flash %>
@@ -69,16 +50,18 @@
           </div>
         </div><!--/row-->
 
+        <div class="push"></div>
+
+      </div> <!-- /container -->
+    </div>
+
       <footer class="navbar-inner">
-        <div class="container">
-          <div class="span12">
-            <p>&copy; The Betterizer 2013</p>
-          </div>
+      <div class="container">
+        <div class="span12">
+          <p>&copy; The Betterizer 2013</p>
         </div>
+      </div>
       </footer>
-
-    </div> <!-- /container -->
-
     <!-- Javascripts
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
