updates the index with some stupid text

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,19 @@
 <div class="row-fluid">
-  <div class="span3">
-    <h3>What Is This?</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas lacinia ipsum mollis semper tincidunt. In faucibus velit sagittis enim dignissim, ut elementum dui ornare. Duis sit amet blandit justo. Nam vehicula enim viverra, ultricies erat eget, commodo lorem. In mattis, libero vel pretium dictum, eros mi rhoncus tellus </p>
+  <div class="span4">
+    <h3>What's All This, Then?</h3>
+    <p>
+    We help you get things done, and get better at them over time.
+    The role of the coach is to give the right feedback at the right
+    time so you get what you need when you need it.
+    </p>
     <%= link_to "more...", about_path %>
   </div>
-  <div class="span9">
-    <%= link_to "Let's Go", new_work_path, class: "btn btn-success" %>
+  <div class="span4">
+    <h3>How do I get started?</h3>
+    <p>The easiest way is to click this button</p>
+    <%= link_to "Get Started", new_work_path, class: "btn btn-success span12" %>
   </div>
+  <div class="span4">
+    <h3>Who else have you helped?</h3>
+    <p>We've helped Fortune 500 companies as well as individuals</p>
 </div>
