--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,16 +28,8 @@
               <%= link_to "sign in with Google", "/auth/google_oauth2" %>
             <% end %>
           </div>
-          <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
           <a class="brand" href="/">The Betterizer</a>
-          <div class="container nav-collapse">
-            <ul class="nav">
-            </ul>
-          </div><!--/.nav-collapse -->
+          <%= render "layouts/navigation" %>
         </div>
       </div>
     </div>
