--- a/app/views/works/_form_work_artifacts.html.erb
+++ b/app/views/works/_form_work_artifacts.html.erb
@@ -6,4 +6,8 @@
   <label><%= f.label "Youtube URL" %></label>
   <%= f.text_field :youtube_url, class: "span12", readonly: readonly %>
 </fieldset>
-
+<div class="span12" style="text-align:center">
+  <% if f.object.youtube_url %>
+    <iframe width="640" height="360" src="<%= f.object.youtube_url %>" frameborder="0" allowfullscreen></iframe>
+  <% end %>
+</div>
